[package]
name = "cumulus-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate dependencies
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", optional = true, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }


# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "ser-inform-fresh-state" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "ser-inform-fresh-state" }

# Other dependencies
codec = { package = "parity-scale-codec", version = "1.0.5", default-features = false, features = [ "derive" ] }
impl-trait-for-tuples = "0.1.3"
hex-literal = "0.2.1"

# Polkadot dependencies
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "ser-inform-fresh-state" }

[features]
default = [ "std" ]
std = [
	"sc-chain-spec",
	"sp-std/std",
	"codec/std",
	"polkadot-primitives/std",
	"polkadot-parachain/std",
	"sp-inherents/std",
	"polkadot-core-primitives/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-trie/std",
	"sp-io/std",
]
